--- a/main.html
+++ b/main.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
+    <title>Schedule Your Life</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -17,11 +18,32 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
-
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+
+    <div class="container">
+      <div class="row">
+	<div class="span6">
+	  <div class="btn-group btn-group-vertical panel panel-default">
+	    <div class="btn-toolbar">
+	      <div class="btn-group btn-group-lg">
+		<button type="submit" class="btn btn-lg sign">Sign In</button>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+	<div class="span6">
+	  <div class="btn-group btn-group-vertical panel panel-default">
+	    <div class="btn-toolbar">
+	      <div class="btn-group btn-group-lg">
+		<button type="submit" class="btn btn-lg sign">Sign Up</button>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+      </div>
+    </div>
   </body>
 </html>
