--- a/main.html
+++ b/main.html
@@ -23,8 +23,8 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
 
-    <div class="container">
-      <div class="row">
+    <div class="container-fluid">
+      <div class="row-fluid">
 	<div class="span6">
 	  <div class="btn-group btn-group-vertical panel panel-default">
 	    <div class="btn-toolbar">
