--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 
     <div class="container-fluid">
       <div class="row-fluid">
-	<div class="span6">
+	<div class="span6 text-center">
 	  <div class="btn-group btn-group-vertical panel panel-default">
 	    <div class="btn-toolbar">
 	      <div class="btn-group btn-group-lg">
@@ -34,7 +34,7 @@
 	    </div>
 	  </div>
 	</div>
-	<div class="span6">
+	<div class="span6 text-center">
 	  <div class="btn-group btn-group-vertical panel panel-default">
 	    <div class="btn-toolbar">
 	      <div class="btn-group btn-group-lg">
