--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
 	  <div class="btn-group btn-group-vertical panel panel-default">
 	    <div class="btn-toolbar">
 	      <div class="btn-group btn-group-lg">
-		<button type="submit" class="btn btn-lg sign">Sign In</button>
+		<button type="submit" class="btn btn-lg btn-success sign">Sign In</button>
 	      </div>
 	    </div>
 	  </div>
@@ -38,7 +38,7 @@
 	  <div class="btn-group btn-group-vertical panel panel-default">
 	    <div class="btn-toolbar">
 	      <div class="btn-group btn-group-lg">
-		<button type="submit" class="btn btn-lg sign">Sign Up</button>
+		<button type="submit" class="btn btn-lg btn-success sign">Sign Up</button>
 	      </div>
 	    </div>
 	  </div>
