--- a/main.html
+++ b/main.html
@@ -49,18 +49,10 @@
       <div class="row-fluid">
 	<div class="span12">
 	  <div class="text-center social-buttons">
-	    <a class="btn btn-social-icon btn-bitbucket"><i class="fa fa-bitbucket"></i></a>
-	    <a class="btn btn-social-icon btn-dropbox"><i class="fa fa-dropbox"></i></a>
-	    <a class="btn btn-social-icon btn-facebook"><i class="fa fa-facebook"></i></a>
-	    <a class="btn btn-social-icon btn-flickr"><i class="fa fa-flickr"></i></a>
-	    <a class="btn btn-social-icon btn-foursquare"><i class="fa fa-foursquare"></i></a>
-	    <a class="btn btn-social-icon btn-github"><i class="fa fa-github"></i></a>
-	    <a class="btn btn-social-icon btn-google-plus"><i class="fa fa-google-plus"></i></a>
-	    <a class="btn btn-social-icon btn-instagram"><i class="fa fa-instagram"></i></a>
-	    <a class="btn btn-social-icon btn-linkedin"><i class="fa fa-linkedin"></i></a>
-	    <a class="btn btn-social-icon btn-tumblr"><i class="fa fa-tumblr"></i></a>
-	    <a class="btn btn-social-icon btn-twitter"><i class="fa fa-twitter"></i></a>
-	    <a class="btn btn-social-icon btn-vk"><i class="fa fa-vk"></i></a>
+	    <a class="btn btn-lg btn-social-icon btn-facebook"><i class="fa fa-facebook"></i></a>
+	    <a class="btn btn-lg btn-social-icon btn-google-plus"><i class="fa fa-google-plus"></i></a>
+	    <a class="btn btn-lg btn-social-icon btn-linkedin"><i class="fa fa-linkedin"></i></a>
+	    <a class="btn btn-lg btn-social-icon btn-twitter"><i class="fa fa-twitter"></i></a>
 	  </div>
 	</div>
       </div>
