--- a/main.html
+++ b/main.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Schedule Your Life</title>
 
+    <script>
+     WebFontConfig={google:{families:["Karla:400,400italic,700,700italic"]},custom:{families:["SteelfishLtRegular"],urls:["css/fonts.css"]}};(function(){var wf=document.createElement("script");wf.src=("https:"==document.location.protocol?"https":"http")+"://ajax.googleapis.com/ajax/libs/webfont/1.4.2/webfont.js";wf.type="text/javascript";wf.async="true";var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(wf,s)})();
+    </script>
+
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
@@ -27,20 +31,27 @@
 
     <div class="container-fluid">
       <div class="row-fluid">
+	<div class="span12 text-center">
+	  <h1 class="margin-base-vertical">Schedule Your Life</h1>
+	  <h2>Repair, Meal, and have Fun</h2>
+	  <h2>Enjory Oncampus Time</h2>
+	</div>
+      </div>
+      <div class="row-fluid">
 	<div class="span6 text-center">
-	  <div class="btn-group btn-group-vertical panel panel-default">
+	  <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
 	    <div class="btn-toolbar">
 	      <div class="btn-group btn-group-lg">
-		<button type="submit" class="btn btn-lg btn-success sign">Sign In</button>
+		<button type="submit" class="btn btn-lg btn-primary sign">Sign In</button>
 	      </div>
 	    </div>
 	  </div>
 	</div>
-	<div class="span6 text-center">
-	  <div class="btn-group btn-group-vertical panel panel-default">
+	<div class="span12 text-center">
+	  <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
 	    <div class="btn-toolbar">
 	      <div class="btn-group btn-group-lg">
-		<button type="submit" class="btn btn-lg btn-success sign">Sign Up</button>
+		<button type="submit" class="btn btn-lg btn-primary sign">Sign Up</button>
 	      </div>
 	    </div>
 	  </div>
@@ -48,12 +59,17 @@
       </div>
       <div class="row-fluid">
 	<div class="span12">
-	  <div class="text-center social-buttons">
+	  <div class="text-center social-buttons margin-base-vertical">
 	    <a class="btn btn-lg btn-social-icon btn-facebook"><i class="fa fa-facebook"></i></a>
 	    <a class="btn btn-lg btn-social-icon btn-google-plus"><i class="fa fa-google-plus"></i></a>
 	    <a class="btn btn-lg btn-social-icon btn-linkedin"><i class="fa fa-linkedin"></i></a>
 	    <a class="btn btn-lg btn-social-icon btn-twitter"><i class="fa fa-twitter"></i></a>
 	  </div>
+	</div>
+      </div>
+      <div class="row-fluid">
+	<div class="span12 text-center">
+	  <h3 class="margin-base-vertical">Powered by LazyForce</h1>
 	</div>
       </div>
     </div>
