--- a/main.html
+++ b/main.html
@@ -42,7 +42,7 @@
 	  <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
 	    <div class="btn-toolbar">
 	      <div class="btn-group btn-group-lg">
-		<button type="submit" class="btn btn-lg btn-primary sign">Sign In</button>
+		<button type="submit" class="btn btn-xlarge btn-primary sign">Sign In</button>
 	      </div>
 	    </div>
 	  </div>
@@ -51,7 +51,7 @@
 	  <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
 	    <div class="btn-toolbar">
 	      <div class="btn-group btn-group-lg">
-		<button type="submit" class="btn btn-lg btn-primary sign">Sign Up</button>
+		<button type="submit" class="btn btn-xlarge btn-primary sign">Sign Up</button>
 	      </div>
 	    </div>
 	  </div>
