--- a/interface.html
+++ b/interface.html
@@ -29,12 +29,12 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
 
-    <div class="container" style="margin-top: 50px;">
-      <ul id="myTab" class="nav nav-tabs" style="margin-bottom: 15px;">
-        <li class="active"><a href="#activities" data-toggle="tab">activities</a></li>
-        <li><a href="#repair" data-toggle="tab">repair</a></li>
-        <li><a href="#meals" data-toggle="tab">meals</a></li>
-	<li><a href="#profile" data-toggle="tab">more</a></li>
+    <div class="container" style="margin-top: 50px;" role="navigation">
+      <ul id="myTab" class="nav nav-tabs navbar navbar-inverse navbar-fixed-top" style="margin-bottom: 15px;">
+        <li class="active"><a href="#activities" data-toggle="tab" class="tab-width">activities</a></li>
+        <li><a href="#repair" data-toggle="tab" class="tab-width">repair</a></li>
+        <li><a href="#meals" data-toggle="tab" class="tab-width">meals</a></li>
+	<li><a href="#profile" data-toggle="tab" class="tab-width">more</a></li>
       </ul>
       <div id="myTabContent" class="tab-content" >
 	<div class="tab-pane fade" id="activities">
