--- a/interface.html
+++ b/interface.html
@@ -31,10 +31,10 @@
 
     <div class="container" style="margin-top: 50px;" role="navigation">
       <ul id="myTab" class="nav nav-tabs navbar navbar-inverse navbar-fixed-top" style="margin-bottom: 15px;">
-        <li class="active"><a href="#activities" data-toggle="tab" class="tab-width">activities</a></li>
-        <li><a href="#repair" data-toggle="tab" class="tab-width">repair</a></li>
-        <li><a href="#meals" data-toggle="tab" class="tab-width">meals</a></li>
-	<li><a href="#profile" data-toggle="tab" class="tab-width">more</a></li>
+        <li class="active"><a href="#activities" data-toggle="tab" class="tab-width"><i class="fa fa-users"></i>|activities</a></li>
+        <li><a href="#repair" data-toggle="tab" class="tab-width"><i class="fa fa-cog"></i>|repair</a></li>
+        <li><a href="#meals" data-toggle="tab" class="tab-width"><i class="fa fa-cutlery"></i>|meals</a></li>
+	<li><a href="#profile" data-toggle="tab" class="tab-width"><i class="fa fa-bars"></i>|more</a></li>
       </ul>
       <div id="myTabContent" class="tab-content" >
 	<div class="tab-pane fade" id="activities">
