--- a/signin.html
+++ b/signin.html
@@ -29,7 +29,7 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/signin.css" rel="stylesheet">
     <link href="css/bootstrap-social.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
 
@@ -60,7 +60,7 @@
                 <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
                     <div class="btn-toolbar">
                         <div class="btn-group btn-group-lg">
-                            <button type="submit" class="btn btn-xlarge btn-primary sign" onclick="location.href='signin.html'">Sign In</button>
+                            <button type="submit" class="btn btn-xlarge btn-primary sign">Sign In</button>
                         </div>
                     </div>
                 </div>
