--- a/signin.html
+++ b/signin.html
@@ -57,7 +57,14 @@
         </div>
         <div class="row-fluid">
             <div class="span6 text-center">
-              
+                <div class="input-group panel panel-default margin-base-vertical">
+                    <input type="text" class="form-control" placeholder="Username">
+                </div>
+            </div>
+            <div class="span6 text-center">
+                <div class="input-group panel panel-default margin-base-vertical">
+                    <input type="text" class="form-control" placeholder="Password">
+                </div>
             </div>
             <div class="span6 text-center">
                 <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
