--- a/interface.html
+++ b/interface.html
@@ -32,15 +32,32 @@
     <div class="container" style="margin-top: 50px;" role="navigation">
       <ul id="myTab" class="nav nav-tabs navbar navbar-inverse navbar-fixed-top" style="margin-bottom: 15px;">
             <ul id="myTab" class="nav nav-tabs navbar navbar-inverse navbar-fixed-top" style="margin-bottom: 15px;">
-              <li class="active"><a href="#activities" data-toggle="tab" class="tab-width"><i class="fa fa-users"></i>|activities</a></li>
-              <li><a href="#repair" data-toggle="tab" class="tab-width"><i class="fa fa-cog"></i>|repair</a></li>
-              <li><a href="#meals" data-toggle="tab" class="tab-width"><i class="fa fa-cutlery"></i>|meals</a></li>
-	      <li><a href="#profile" data-toggle="tab" class="tab-width"><i class="fa fa-bars"></i>|more</a></li>
+              <li class="active"><a href="#activities" data-toggle="tab"><i class="fa fa-users"></i>|activities</a></li>
+              <li><a href="#repair" data-toggle="tab"><i class="fa fa-cog"></i>|repair</a></li>
+              <li><a href="#meals" data-toggle="tab"><i class="fa fa-cutlery"></i>|meals</a></li>
+	      <li><a href="#profile" data-toggle="tab"><i class="fa fa-bars"></i>|more</a></li>
 	    </ul>
         </ul>
       <div id="myTabContent" class="tab-content">
             <div class="tab-pane fade" id="activities">
-                <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+	      <!-- -->
+	      <div class="btn-group">
+		<button type="button" class="btn btn-default">1</button>
+		<button type="button" class="btn btn-default">2</button>
+
+		<div class="btn-group">
+		  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+		    Dropdown
+		    <span class="caret"></span>
+		  </button>
+		  <ul class="dropdown-menu">
+		    <li><a href="#">Dropdown link</a></li>
+		    <li><a href="#">Dropdown link</a></li>
+		  </ul>
+		</div>
+	      </div>
+
+              <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
             </div>
             <div class="tab-pane fade in active" id="repair">
                 <p>Light Blue - is a next generation admin template based on the latest Metro design. There are few reasons we want to tell you, why we have created it: We didn't like the darkness of most of admin templates, so we created this light one. We didn't like the high contrast of most of admin templates, so we created this unobtrusive one. We searched for a solution of how to make widgets look like real widgets, so we decided that deep background - is what makes widgets look real.</p>
