--- a/signin.html
+++ b/signin.html
@@ -56,17 +56,17 @@
             </div>
         </div>
         <div class="row-fluid">
-            <div class="span6 text-center">
-                <div class="input-group panel panel-default margin-base-vertical">
-                    <input type="text" class="form-control" placeholder="Username">
-                </div>
+            <div class="span4 panel-default margin-base-vertical">
+	      <form class="form-horizontal center" role="form" style="width: 20%;">
+                <input type="text" class="form-control" placeholder="Username">
+	      </form>
             </div>
-            <div class="span6 text-center">
-                <div class="input-group panel panel-default margin-base-vertical">
-                    <input type="text" class="form-control" placeholder="Password">
-                </div>
+            <div class="span4 panel-default margin-base-vertical">	      
+              <form class="form-horizontal center" role="form" style="width: 20%;">
+                <input type="text" class="form-control" placeholder="Password">
+              </form>
             </div>
-            <div class="span6 text-center">
+            <div class="span4 text-center">
                 <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
                     <div class="btn-toolbar">
                         <div class="btn-group btn-group-lg">
