--- a/signin.html
+++ b/signin.html
@@ -70,13 +70,13 @@
                 <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
                     <div class="btn-toolbar">
                         <div class="btn-group btn-group-lg">
-                            <button type="submit" class="btn btn-xlarge btn-primary sign">Sign In</button>
+                            <button type="submit" class="btn btn-xlarge btn-primary sign" class="btn btn-xlarge btn-primary sign" onclick="location.href='interface.html'">Sign In</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row-fluid">
+  <!--       <div class="row-fluid">
             <div class="span12">
                 <div class="text-center social-buttons margin-base-vertical">
                     <a class="btn btn-lg btn-social-icon btn-facebook"><i class="fa fa-facebook"></i></a>
@@ -85,7 +85,7 @@
                     <a class="btn btn-lg btn-social-icon btn-twitter"><i class="fa fa-twitter"></i></a>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="row-fluid">
             <div class="span12 text-center">
                 <h3 class="margin-base-vertical">Powered by LazyForce</h1>
