user-scalable=no

--- a/interface.html
+++ b/interface.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Schedule Your Life</title>
 
     <script>
@@ -85,16 +85,17 @@
                     </div>
                 </div>
                 <div class="span4 text-center">
-                <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
-                    <div class="btn-toolbar">
-                        <div class="btn-group btn-group-lg">
-                            <button type="submit" class="btn btn-xlarge btn-primary sign" class="btn btn-xlarge btn-primary sign" onclick="location.href='interface.html'">Post New!</button>
+                    <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
+                        <div class="btn-toolbar">
+                            <div class="btn-group btn-group-lg">
+                                <button type="submit" class="btn btn-xlarge btn-primary sign" class="btn btn-xlarge btn-primary sign" onclick="location.href='interface.html'">Post New!</button>
+                            </div>
                         </div>
                     </div>
-                </div>  
-            </div>
+                </div>
 
-                <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+                <textarea>
+                </textarea>
             </div>
             <div class="tab-pane fade in active" id="repair">
                 <p>Light Blue - is a next generation admin template based on the latest Metro design. There are few reasons we want to tell you, why we have created it: We didn't like the darkness of most of admin templates, so we created this light one. We didn't like the high contrast of most of admin templates, so we created this unobtrusive one. We searched for a solution of how to make widgets look like real widgets, so we decided that deep background - is what makes widgets look real.</p>
