--- a/interface.html
+++ b/interface.html
@@ -38,10 +38,10 @@
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+      <![endif]-->
 </head>
 
-<body>df
+<body>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -85,14 +85,14 @@
                     </div>
                 </div>
                 <div class="span4 text-center">
-                <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
-                    <div class="btn-toolbar">
-                        <div class="btn-group btn-group-lg">
-                            <button type="submit" class="btn btn-xlarge btn-primary sign" class="btn btn-xlarge btn-primary sign" onclick="location.href='interface.html'">Post New!</button>
+                    <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
+                        <div class="btn-toolbar">
+                            <div class="btn-group btn-group-lg">
+                                <button type="submit" class="btn btn-xlarge btn-primary sign" class="btn btn-xlarge btn-primary sign" onclick="location.href='interface.html'">Post New!</button>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
                 <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
             </div>
