--- a/interface.html
+++ b/interface.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Schedule Your Life</title>
-    <!-- Mengyun -->
+
     <script>
     WebFontConfig = {
         google: {
@@ -26,9 +26,10 @@
         s.parentNode.insertBefore(wf, s)
     })();
     </script>
-    <!-- chaochao -->
+
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="css/interface.css" rel="stylesheet">
     <link href="css/bootstrap-social.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -47,71 +48,100 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
 
-    <div class="container" style="margin-top: 50px;" role="navigation">
-        <ul id="myTab" class="nav nav-tabs navbar navbar-inverse navbar-fixed-top" style="margin-bottom: 15px;">
-            <ul id="myTab" class="nav nav-tabs navbar navbar-inverse navbar-fixed-top" style="margin-bottom: 15px;">
-                <li class="active"><a href="#activities" data-toggle="tab"><i class="fa fa-users"></i>activities</a>
-                </li>
-                <li><a href="#repair" data-toggle="tab"><i class="fa fa-cog"></i>repair</a>
-                </li>
-                <li><a href="#meals" data-toggle="tab"><i class="fa fa-cutlery"></i>meals</a>
-                </li>
-                <li><a href="#profile" data-toggle="tab"><i class="fa fa-bars"></i>more</a>
-                </li>
-            </ul>
-        </ul>
-        <div id="myTabContent" class="tab-content">
-            <div class="tab-pane fade" id="activities">
-                <!-- -->
-                <div class="btn-group">
-                    <button type="button" class="btn btn-default">UPCOMING</button>
-                    <button type="button" class="btn btn-default">HISTORY</button>
+    <div id="myTabContent" class="tab-content">
+        <div class="tab-pane fade in active" id="activities">
+            <!-- -->
+            <div class="btn-group">
+                <button type="button" class="btn btn-default">UPCOMING</button>
+                <button type="button" class="btn btn-default">HISTORY</button>
 
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                            All
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">ALL</a>
-                            </li>
-                            <li><a href="#">Engelhart</a>
-                            </li>
-                            <li><a href="#">Seabury</a>
-                            </li>
-                            <li><a href="#">McMaus</a>
-                            </li>
-                        </ul>
-                    </div>
+                <div class="btn-group">
+                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                        All
+                        <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">ALL</a>
+                        </li>
+                        <li><a href="#">Engelhart</a>
+                        </li>
+                        <li><a href="#">Seabury</a>
+                        </li>
+                        <li><a href="#">McMaus</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="span4 text-center">
-                    <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
-                        <div class="btn-toolbar">
-                            <div class="btn-group btn-group-lg">
-                                <button type="submit" class="btn btn-xlarge btn-primary sign" class="btn btn-xlarge btn-primary sign" onclick="location.href='interface.html'">Post New!</button>
-                            </div>
+            </div>
+            <div class="span4 text-center">
+                <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
+                    <div class="btn-toolbar">
+                        <div class="btn-group btn-group-lg">
+                            <button type="submit" class="btn btn-xlarge btn-primary sign" class="btn btn-xlarge btn-primary sign" onclick="location.href='interface.html'">Post New!</button>
                         </div>
                     </div>
                 </div>
-
-                <textarea>
-                </textarea>
             </div>
-            <div class="tab-pane fade in active" id="repair">
-                <p>Light Blue - is a next generation admin template based on the latest Metro design. There are few reasons we want to tell you, why we have created it: We didn't like the darkness of most of admin templates, so we created this light one. We didn't like the high contrast of most of admin templates, so we created this unobtrusive one. We searched for a solution of how to make widgets look like real widgets, so we decided that deep background - is what makes widgets look real.</p>
-            </div>
-            <div class="tab-pane fade" id="meals">
-                <p>Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork. Williamsburg banh mi whatever gluten-free, carles pitchfork biodiesel fixie etsy retro mlkshk vice blog. Scenester cred you probably haven't heard of them, vinyl craft beer blog stumptown. Pitchfork sustainable tofu synth chambray yr.</p>
-            </div>
-            <div class="tab-pane fade" id="profile">
-                <p>They sold out master cleanse gluten-free squid scenester freegan cosby sweater. Fanny pack portland seitan DIY, art party locavore wolf cliche high life echo park Austin. Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold out farm-to-table VHS viral locavore cosby sweater. Lomo wolf viral, mustache readymade thundercats keffiyeh craft beer marfa ethical. Wolf salvia freegan, sartorial keffiyeh echo park vegan.</p>
-            </div>
+        </div>
+        <div class="tab-pane fade" id="repair">
+            <p>Light Blue - is a next generation admin template based on the latest Metro design. There are few reasons we want to tell you, why we have created it: We didn't like the darkness of most of admin templates, so we created this light one. We didn't like the high contrast of most of admin templates, so we created this unobtrusive one. We searched for a solution of how to make widgets look like real widgets, so we decided that deep background - is what makes widgets look real.</p>
+        </div>
+        <div class="tab-pane fade" id="meals">
+            <p>Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork. Williamsburg banh mi whatever gluten-free, carles pitchfork biodiesel fixie etsy retro mlkshk vice blog. Scenester cred you probably haven't heard of them, vinyl craft beer blog stumptown. Pitchfork sustainable tofu synth chambray yr.</p>
+        </div>
+        <div class="tab-pane fade" id="profile">
+            <p>They sold out master cleanse gluten-free squid scenester freegan cosby sweater. Fanny pack portland seitan DIY, art party locavore wolf cliche high life echo park Austin. Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold out farm-to-table VHS viral locavore cosby sweater. Lomo wolf viral, mustache readymade thundercats keffiyeh craft beer marfa ethical. Wolf salvia freegan, sartorial keffiyeh echo park vegan.</p>
         </div>
     </div>
 
+    <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+    <!--
+        <div class="container-fluid" style="margin-bottom: 0px;">
+            <div class="navbar-header">
+                <ul id="myTab" class="nav navbar-nav nav-tabs navbar navbar-inverse">
+                    <li class="active">
+                        <a href="#activities" data-toggle="tab"><i class="fa fa-users"></i>|activities</a>
+                    </li>
+                    <li>
+                        <a href="#repair" data-toggle="tab"><i class="fa fa-cog"></i>|repair</a>
+                    </li>
+                    <li>
+                        <a href="#meals" data-toggle="tab"><i class="fa fa-cutlery"></i>|meals</a>
+                    </li>
+                    <li>
+                        <a href="#profile" data-toggle="tab"><i class="fa fa-bars"></i>|more</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        -->
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="#" class="navbar-brand">LazyForce</a>
+        </div>
+        <!-- Collection of nav links and other content for toggling -->
+        <div id="navbarCollapse" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#activities"><i class="fa fa-users"></i>|activities</a>
+                </li>
+                <li><a href="main.html"><i class="fa fa-wrench"></i>|repair</a>
+                </li>
+                <li><a href="#meals"><i class="fa fa-cutlery"></i>|meals</a>
+                </li>
+                <li><a href="#profile"><i class="fa fa-cog"></i>|profile</a></li>
+            </ul>
+        </div>
+    </nav>
+<!--
     <script type="text/javascript">
-    $('#myTab').collapse()
+    $('#navbarCollapse').collapse()
     </script>
+    -->
 </body>
 
 </html>
