--- a/interface.html
+++ b/interface.html
@@ -127,13 +127,13 @@
         <!-- Collection of nav links and other content for toggling -->
         <div id="navbarCollapse" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#activities"><i class="fa fa-users"></i>|activities</a>
+                <li class="active"><a href="#activities"><i class="fa fa-users fa-fw"></i>|activities</a>
                 </li>
-                <li><a href="main.html"><i class="fa fa-wrench"></i>|repair</a>
+                <li><a href="main.html"><i class="fa fa-wrench fa-fw"></i>|repair</a>
                 </li>
-                <li><a href="#meals"><i class="fa fa-cutlery"></i>|meals</a>
+                <li><a href="#meals"><i class="fa fa-cutlery fa-fw"></i>|meals</a>
                 </li>
-                <li><a href="#profile"><i class="fa fa-cog"></i>|profile</a></li>
+                <li><a href="#profile"><i class="fa fa-cog fa-fw"></i>|profile</a></li>
             </ul>
         </div>
     </nav>
