avtivity main interface
still need modifying

--- a/activity.html
+++ b/activity.html
@@ -79,16 +79,46 @@
         </div>
     </div>
     <div class="panel panel-primary">
-        <div class="panel-heading">NBA Final GALA!</div>
-        <div class="panel-body">blablabla</div>
+        <div class="panel-heading">NBA GALA!</div>
+        <div class="panel-body">
+            <ul>
+                <strong>
+                <li>02-02 20:00-22:00</li>
+                <li>Engelhalt Room 325</li>
+                <li>TAG: Basketball</li>
+                <li><abbr title="Phone">Tel:</abbr> (123) 456-7890</li>
+                <img src="..." class="img-responsive" alt="Responsive image">
+                </strong>
+            </ul>
+        </div>
     </div>
     <div class="panel panel-primary">
         <div class="panel-heading">MAHJONG</div>
-        <div class="panel-body">blablabla</div>
+        <div class="panel-body">
+            <ul>
+                <strong>
+                <li>02-04 21:00-23:00</li>
+                <li>Seabury Room 201</li>
+                <li>TAG:Table Game</li>
+                <li><abbr title="Phone">Tel:</abbr> (222) 333-4455</li>
+                <img src="..." class="img-responsive" alt="Responsive image">
+                </strong>
+            </ul>
+        </div>
     </div>
     <div class="panel panel-primary">
         <div class="panel-heading">LOL</div>
-        <div class="panel-body">blablabla</div>
+        <div class="panel-body">
+            <ul>
+                <strong>
+                <li>02-04 14:00-15:00</li>
+                <li>Engelhalt Room 214</li>
+                <li>TAG: PC GAME</li>
+                <li><abbr title="Phone">Tel:</abbr> (999) 888-7766</li>
+                <img src="..." class="img-responsive" alt="Responsive image">
+                </strong>
+            </ul>
+        </div>
     </div>
     <!-- DO NOT MODIFY THOSE FOLLOWING -->
     <div id="include_navBar"></div>
