signin.html link

--- a/signin.html
+++ b/signin.html
@@ -70,7 +70,7 @@
                 <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
                     <div class="btn-toolbar">
                         <div class="btn-group btn-group-lg">
-                            <button type="submit" class="btn btn-xlarge btn-primary sign" class="btn btn-xlarge btn-primary sign" onclick="location.href='interface.html'">Sign In</button>
+                            <button type="submit" class="btn btn-xlarge btn-primary sign" class="btn btn-xlarge btn-primary sign" onclick="location.href='activity.html'">Sign In</button>
                         </div>
                     </div>
                 </div>
