initialization of repair and meals

--- a/meals.html
+++ b/meals.html
@@ -12,36 +12,15 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <!-- Google fonts -->
-    <script>
-    WebFontConfig = {
-        google: {
-            families: ["Karla:400,400italic,700,700italic"]
-        },
-        custom: {
-            families: ["SteelfishLtRegular"],
-            urls: ["css/fonts.css"]
-        }
-    };
-    (function() {
-        var wf = document.createElement("script");
-        wf.src = ("https:" == document.location.protocol ? "https" : "http") + "://ajax.googleapis.com/ajax/libs/webfont/1.4.2/webfont.js";
-        wf.type = "text/javascript";
-        wf.async = "true";
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(wf, s)
-    })();
-    $(function() {
-        $("#include_navBar").load("navbar.html");
-    });
-    </script>
+    <script src="js/template.js"></script>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="css/interface.css" rel="stylesheet">
     <link href="css/bootstrap-social.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/interface.css" rel="stylesheet">
-    <link href="css/meals.css" rel="stylesheet">
+    <link href="css/template.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -53,7 +32,7 @@
 
 <body>
     <!-- This is a templete, do any thing between this line and the next comment line -->
-    lalala, this is meal, so sad...
+
 
 
     <!-- DO NOT MODIFY THOSE FOLLOWING -->
