--- a/activity.html
+++ b/activity.html
@@ -63,10 +63,10 @@
         <div class="panel-body">
             <ul>
                 <strong>
-                <li>02-02 20:00-22:00</li>
-                <li>Engelhalt Room 325</li>
-                <li>TAG: Basketball</li>
-                <li><abbr title="Phone">Tel:</abbr> (123) 456-7890</li>
+                <li><span class=" glyphicon glyphicon-time"></span>02-02 20:00-22:00</li>
+                <li><span class=" glyphicon glyphicon-map-marker"></span>Engelhalt Room 325</li>
+                <li><span class=" glyphicon glyphicon-tag"></span>TAG: Basketball</li>
+                <li><span class=" glyphicon glyphicon-phone"></span><abbr title="Phone">Tel:</abbr> (123) 456-7890</li>
                 <img src="..." class="img-responsive" alt="Responsive image">
                 </strong>
             </ul>
@@ -77,10 +77,10 @@
         <div class="panel-body">
             <ul>
                 <strong>
-                <li>02-04 21:00-23:00</li>
-                <li>Seabury Room 201</li>
-                <li>TAG:Table Game</li>
-                <li><abbr title="Phone">Tel:</abbr> (222) 333-4455</li>
+                <li><span class=" glyphicon glyphicon-time"></span>02-04 21:00-23:00</li>
+                <li><span class=" glyphicon glyphicon-map-marker"></span>Seabury Room 201</li>
+                <li><span class=" glyphicon glyphicon-tag"></span>TAG:Table Game</li>
+                <li><span class=" glyphicon glyphicon-phone"></span><abbr title="Phone">Tel:</abbr> (222) 333-4455</li>
                 <img src="..." class="img-responsive" alt="Responsive image">
                 </strong>
             </ul>
@@ -91,10 +91,10 @@
         <div class="panel-body">
             <ul>
                 <strong>
-                <li>02-04 14:00-15:00</li>
-                <li>Engelhalt Room 214</li>
-                <li>TAG: PC GAME</li>
-                <li><abbr title="Phone">Tel:</abbr> (999) 888-7766</li>
+                <li><span class=" glyphicon glyphicon-time"></span>02-04 14:00-15:00</li>
+                <li><span class=" glyphicon glyphicon-map-marker"></span>Engelhalt Room 214</li>
+                <li><span class=" glyphicon glyphicon-tag"></span>TAG: PC GAME</li>
+                <li><span class=" glyphicon glyphicon-phone"></span><abbr title="Phone">Tel:</abbr> (999) 888-7766</li>
                 <img src="..." class="img-responsive" alt="Responsive image">
                 </strong>
             </ul>
