--- a/meals.html
+++ b/meals.html
@@ -5,9 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Schedule Your Life</title>
-
-
+    <title>Schedule Your Life - Meal Ordering</title>
 
     <script>
     WebFontConfig = {
@@ -28,7 +26,6 @@
         s.parentNode.insertBefore(wf, s)
     })();
     </script>
-
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -54,22 +51,22 @@
 </head>
 
 <body>
-
+    <div class="span4 text-left">Meal Ordering</div>
+    <div class="span4 text-left"></div>
     <div class="span4 text-center">
-        <div>Customize a new order:</div>
-        <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
+        <div class="btn-group btn-group-vertical panel panel-default">
             <div class="btn-toolbar">
                 <div class="btn-group btn-group-lg">
                     <button type="submit" class="btn btn-large btn-primary" onclick="location.href='interface.html'">
-                        New Order
+                        Customize a new order
                     </button>
                 </div>
             </div>
         </div>
     </div>
+    <div class="span4 text-left">Select a popular meal other people like</div>
     <div class="span4 text-center">
-        <div>Select a popular meal other people like:</div>
-        <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
+        <div class="btn-group btn-group-vertical panel panel-default">
             <div class="btn-toolbar">
                 <div class="btn-group btn-group-lg">
                     <button type="submit" class="btn btn-large btn-primary" onclick="location.href='interface.html'">
@@ -82,9 +79,9 @@
             </div>
         </div>
     </div>
+    <div class="span4 text-left">Select from my favorite</div>
     <div class="span4 text-center">
-        <div>Select from my favorite:</div>
-        <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
+        <div class="btn-group btn-group-vertical panel panel-default">
             <div class="btn-toolbar">
                 <div class="btn-group btn-group-lg">
                     <button type="submit" class="btn btn-large btn-primary" onclick="location.href='interface.html'">
@@ -98,31 +95,30 @@
         </div>
     </div>
 
-    <div class="span4 text-center">
-        <div>My order history:</div>
-    </div>
 
-    <div class="panel panel-primary">
+    <div lass="span4 text-left">My order history</div>
+
+    <div class="panel panel-primary collapse-group">
         <div class="panel-heading">Burger King - Mar.02, 2014
-            <button type="submit" class="btn btn-small btn-primary" onclick="location.href='interface.html'" style="float: right;">
-                Edit
-            </button>
         </div>
-
-        <div class="panel-body">
+        <a class="btn" data-toggle="collapse" data-target="#viewdetails1">View details &raquo;</a>
+        <div class="panel-body collapse" id="viewdetails1">
             <ul>
                 <strong>
                     <li>
-                        <span class=" glyphicon glyphicon-shopping-cart"></span>&nbsp;Sausage & Cheese Muffin Sandwich Meal
+                        <span class=" glyphicon glyphicon-shopping-cart "></span>&nbsp;Sausage & Cheese Muffin Sandwich Meal
                     </li>
                     <li>
-                        <span class=" glyphicon glyphicon-time"></span>&nbsp;Mar.02, 2014 - 12:30 PM
+                        <span class=" glyphicon glyphicon-time "></span>&nbsp;Mar.02, 2014 - 12:30 PM
                     </li>
                     <li>
-                        <span class=" glyphicon glyphicon-map-marker"></span>&nbsp;Engelhalt Room 325
+                        <span class=" glyphicon glyphicon-map-marker "></span>&nbsp;Engelhalt Room 325
                     </li>
                     <li>
-                        <span class=" glyphicon glyphicon-transfer"></span>&nbsp; Prepare to deliver
+                        <span class=" glyphicon glyphicon-transfer "></span>&nbsp; Prepare to deliver
+                        <button type="submit " class="btn btn-small btn-primary " onclick="location.href='interface.html' " style="float: right; ">
+                            Edit
+                        </button>
                     </li>
                 </strong>
             </ul>
@@ -130,19 +126,20 @@
     </div>
     <div class="panel panel-primary">
         <div class="panel-heading">Koi - Mar.02, 2014</div>
-        <div class="panel-body">
+        <a class="btn" data-toggle="collapse" data-target="#viewdetails2">View details &raquo;</a>
+        <div class="panel-body collapse" id="viewdetails2">
             <ul>
                 <strong>
                     <li>
-                        <span class=" glyphicon glyphicon-shopping-cart"></span>&nbsp;Hot Pepper Chicken</li>
+                        <span class=" glyphicon glyphicon-shopping-cart "></span>&nbsp;Hot Pepper Chicken</li>
                     <li>
-                        <span class=" glyphicon glyphicon-time"></span>&nbsp;Feb.22, 2014 - 6:30 PM
+                        <span class=" glyphicon glyphicon-time "></span>&nbsp;Feb.22, 2014 - 6:30 PM
                     </li>
                     <li>
-                        <span class=" glyphicon glyphicon-map-marker"></span>&nbsp;Engelhalt Room 226
+                        <span class=" glyphicon glyphicon-map-marker "></span>&nbsp;Engelhalt Room 226
                     </li>
                     <li>
-                        <span class=" glyphicon glyphicon-transfer"></span>&nbsp; Delivered
+                        <span class=" glyphicon glyphicon-transfer "></span>&nbsp; Delivered
                     </li>
                 </strong>
             </ul>
@@ -153,7 +150,7 @@
 
 
     <!-- DO NOT MODIFY THOSE FOLLOWING -->
-    <div id="include_navBar"></div>
+    <div id="include_navBar "></div>
 </body>
 
 </html>
