--- a/ask-for-help.html
+++ b/ask-for-help.html
@@ -55,51 +55,64 @@
 
 <body>
 
-    <div class="span4 text-center">
-        <div>Ask for official help from school, usually need 2 days to come:</div>
-        <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
-            <div class="btn-toolbar">
-                <div class="btn-group btn-group-lg">
-                    <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='maintenance-request.html'">
-                    <span class="glyphicon glyphicon-user"> Maintenance-Request</button>
-                </div>
+    <div class="span4 text-center"><h2>ASK FOR HELP</h2></div>
+    <form role="form">
+        <div class="form-group">
+            <label>*Problem Type:</label>
+            <div class="btn-group">
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                (Please Select:) <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                <li><a href="#">Electicity</a></li>
+                <li><a href="#">Heating</a></li>
+                <li><a href="#">Toilets</a></li>
+                <li><a href="#">Computers</a></li>
+                <li><a href="#">Networks</a></li>
+                <li><a href="#">Others</a></li>
+                </ul>
             </div>
         </div>
-    </div>
-    <div class="span4 text-center">
-        <div>Search for the frequently asked questions & answers:</div>
-        <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
-            <div class="btn-toolbar">
-                <div class="btn-group btn-group-lg">
-                    <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair.html'">
-                    <span class="glyphicon glyphicon-search"> Problems&Solutions</button>
-                </div>
+        <div class="form-group">
+            <label>*Problem Description:</label>
+            <textarea class="form-control" rows="3"></textarea>
+        </div>
+        <div class="form-group">
+            <label>*Apartment Building:</label>
+            <div class="btn-group">
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                Engelhart<span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                <li><a href="#">Engelhart</a></li>
+                <li><a href="#">Seabury</a></li>
+                <li><a href="#">McMaus</a></li>
+                </ul>
             </div>
         </div>
-    </div>
-    <div class="span4 text-center">
-    <div>Ask for help from the students living in the same apartment:</div>
-        <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
-            <div class="btn-toolbar">
-                <div class="btn-group btn-group-lg">
-                    <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='ask-for-help.html'">
-                    <span class="glyphicon glyphicon-refresh"> Ask-for-help</button>
-                </div>
-            </div>
+        <div class="form-group">
+            <label>*Room Number:</label>
+            <input type="roomnumber" class="form-control" placeholder="Enter Room#">
         </div>
+        <div class="form-group">
+            <label>*Phone Number:</label>
+            <input type="phonenumber" class="form-control" placeholder="Enter Phone#">
+        </div>
+
+        <div class="form-group">
+            <label>*Available time:</label>
+            <input type="availabletime" class="form-control" placeholder="Enter available time">
+        </div>
+    </form>
+
+    <div class="center">
+        <button class="btn btn-default" onclick="location.href='repair-submit.html'">Submit</button>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
+        <button class="btn btn-default" onclick="location.href='repair.html'">Back</button>
     </div>
 
-    <div class="span4 text-center">
-        <div>Join to help the students living in the same apartment:</div>
-        <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
-            <div class="btn-toolbar">
-                <div class="btn-group btn-group-lg">
-                    <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='join-to-help.html'">
-                    <span class="glyphicon glyphicon-retweet"> Join-to-help</button>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!-- DO NOT MODIFY THOSE FOLLOWING -->
+    <div id="include_navBar"></div>
 
 
 
