--- a/repair-submit.html
+++ b/repair-submit.html
@@ -56,49 +56,8 @@
 <body>
 
     <div class="span4 text-center">
-        <div>Ask for official help from school, usually need 2 days to come:</div>
-        <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
-            <div class="btn-toolbar">
-                <div class="btn-group btn-group-lg">
-                    <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='maintenance-request.html'">
-                    <span class="glyphicon glyphicon-user"> Maintenance-Request</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="span4 text-center">
-        <div>Search for the frequently asked questions & answers:</div>
-        <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
-            <div class="btn-toolbar">
-                <div class="btn-group btn-group-lg">
-                    <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair.html'">
-                    <span class="glyphicon glyphicon-search"> Problems&Solutions</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="span4 text-center">
-    <div>Ask for help from the students living in the same apartment:</div>
-        <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
-            <div class="btn-toolbar">
-                <div class="btn-group btn-group-lg">
-                    <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='ask-for-help.html'">
-                    <span class="glyphicon glyphicon-refresh"> Ask-for-help</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="span4 text-center">
-        <div>Join to help the students living in the same apartment:</div>
-        <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
-            <div class="btn-toolbar">
-                <div class="btn-group btn-group-lg">
-                    <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='join-to-help.html'">
-                    <span class="glyphicon glyphicon-retweet"> Join-to-help</button>
-                </div>
-            </div>
-        </div>
+        <h1>Submission Succeed!</h1>
+        <button class="btn btn-default" onclick="location.href='repair.html'">Back</button>
     </div>
 
 
