Repair small changes

--- a/join-to-help.html
+++ b/join-to-help.html
@@ -59,15 +59,13 @@
     <form role="form">
         <div class="form-group">
             <label>*The problem types you may be able to help (Select all that applied):</label>
-<br>
-<input type="checkbox" name="checkbox1" value="checkbox">Electicity &nbsp;
-<input type="checkbox" name="checkbox2" value="checkbox">Heating &nbsp;
-<input type="checkbox" name="checkbox3" value="checkbox">Toilets&nbsp;
-<input type="checkbox" name="checkbox4" value="checkbox">Computers&nbsp;
-<input type="checkbox" name="checkbox4" value="checkbox">Networks&nbsp;
-<input type="checkbox" name="checkbox4" value="checkbox">Others:&nbsp; <textarea rows="1"></textarea>
-
-
+            <br>
+            <input type="checkbox" id="checkbox1">Electicity &nbsp;
+            <input type="checkbox" id="checkbox2">Heating &nbsp;
+            <input type="checkbox" id="checkbox3">Toilets&nbsp;
+            <input type="checkbox" id="checkbox4">Computers&nbsp;
+            <input type="checkbox" id="checkbox5">Networks&nbsp;
+            <input type="checkbox" id="checkbox6">Others:&nbsp; <textarea rows="1"></textarea>
         </div>
 
         <div class="form-group">
@@ -87,9 +85,9 @@
 
         <div class="form-group">
             <label>*Would like to reveive messages of maintenance request via (Select all that applied):</label><br>
-            <input type="checkbox" name="checkbox4" value="checkbox">E-mail:&nbsp; <textarea rows="1" placeholder="Enter your e-mail Address"></textarea><br>
-            <input type="checkbox" name="checkbox4" value="checkbox">Phone Message:&nbsp; <textarea rows="1" placeholder="Enter your phone#"></textarea><br>
-            <input type="checkbox" name="checkbox4" value="checkbox">APP Notices
+            <input type="checkbox" id="checkbox7">E-mail:&nbsp; <textarea rows="1" placeholder="Enter your e-mail Address"></textarea><br>
+            <input type="checkbox" id="checkbox8" >Phone:&nbsp; <textarea rows="1" placeholder="Enter your phone#"></textarea><br>
+            <input type="checkbox" id="checkbox9">APP Notices
         </div>
     </form>
 
