Repair_fix bugs about bottom

--- a/ask-for-help.html
+++ b/ask-for-help.html
@@ -109,7 +109,7 @@
         <button class="btn btn-default" onclick="location.href='repair-submit.html'">Submit</button>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
         <button class="btn btn-default" onclick="location.href='repair.html'">Back</button>
-    </div>
+    </div><br><br><br>
 
     <!-- DO NOT MODIFY THOSE FOLLOWING -->
     <div id="include_navBar"></div>
