--- a/repair.html
+++ b/repair.html
@@ -95,11 +95,12 @@
             <div class="btn-toolbar">
                 <div class="btn-group btn-group-lg">
                     <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='join-to-help.html'">
-                    <span class="glyphicon glyphicon-retweet"> Join-to-help</button>
+                    <span class="glyphicon glyphicon-retweet"> Join-to-help</button><br><br><br>
                 </div>
             </div>
         </div>
     </div>
+
 
 
 
