activity details modified
almost done, but still some defiencies

--- a/activity details.html
+++ b/activity details.html
@@ -33,12 +33,38 @@
 <body>
     <!-- This is a templete, do any thing between this line and the next comment line -->
     <h1 class="text-center">ACTIVITY DETAILS<small>(Undergoing)</small></h1>
-    <dl class="dl-horizontal">
-        <dt>TIME</dt>
-        <dd><span class=" glyphicon glyphicon-time"></span>02-02 20:00-22:00</dd>
-        <dt>LOCATION</dt>
-        <dd><span class=" glyphicon glyphicon-map-marker"></span>Engelhalt Room 325</dd>
-    </dl>
+    <br>
+    <div class="row">
+        <div class="col-xs-6 col-sm-4"></div>
+        <div class="col-xs-6 col-sm-4">
+            <dl class="dl-horizontal">
+                <dt>TITLE<span class=" glyphicon glyphicon-star"></span></dt>
+                <dd> NAB GALA!</dd>
+                <dt>TIME<span class=" glyphicon glyphicon-time"></span></dt>
+                <dd>02-02 20:00-22:00</dd>
+                <dt>LOCATION<span class=" glyphicon glyphicon-map-marker"></span></dt>
+                <dd>Engelhalt Room 325</dd>
+                <dt>TAG<span class=" glyphicon glyphicon-tag"></span></dt>
+                <dd>Basketball</dd>
+                <dt>CAPACITY<span class=" glyphicon glyphicon-upload"></span></dt>
+                <dd>10 People(At Most)</dd>
+                <dt>HOST INFORMATION<span class=" glyphicon glyphicon-user"></span></dt>
+                <dd>
+                    <li>Name: P. Linda</li>
+                    <li>Email: Linda@u.northwestern.edu</li>
+                    <li>Tel: 847-964-0087</li>
+                </dd>
+                <dt>Description<span class=" glyphicon glyphicon-list-alt"></span></dt>
+                <dd>Are you feel bored of stressful study? Tonight we will watch NBA all-star game! Come and join us!</dd>
+                <dt>PICTURE<span class=" glyphicon glyphicon-picture"></span></dt>
+                <dd><img src="..." class="img-responsive" alt="Responsive image"></dd>
+            </dl>
+            <p><a class="btn btn-primary btn-lg" role="button">I AM INTERESTED<span class=" glyphicon glyphicon-heart"></a></p>
+            <p><a class="btn btn-primary btn-lg" role="button">I WILL ATTEND<span class=" glyphicon glyphicon-thumbs-up"></a></p>       
+        </div>
+        <div class="clearfix visible-xs"></div>
+        <div class="col-xs-6 col-sm-4"></div>
+    </div>
 
     <!-- DO NOT MODIFY THOSE FOLLOWING -->
     <div id="include_navBar"></div>
